--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
     "dayjs": "1.9.7",
-    "flatpickr": "^4.6.6",
-    "he": "^1.2.0",
-    "nanoid": "3.1.22"
+    "flatpickr": "^4.6.6"
   }
 }
