--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "css-loader": "^5.0.1",
+    "css-loader": "5.0.1",
     "eslint": "7.13.0",
     "eslint-config-htmlacademy": "3.0.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "style-loader": "2.0.0",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "engines": {
     "node": "10"
   },
   "dependencies": {
-    "chart.js": "^2.9.4",
-    "chartjs-plugin-datalabels": "^0.7.0",
+    "chart.js": "2.9.4",
+    "chartjs-plugin-datalabels": "0.7.0",
     "dayjs": "1.9.7",
-    "flatpickr": "^4.6.6"
+    "flatpickr": "4.6.6"
   }
 }
